# zddm

./: .gitignore  readme.md
.circleci/: config.yml
design/: readme.md
lib/cpp/: CMakeLists.txt  readme.md
lib/cpp/src/: CMakeLists.txt
lib/cpp/src/zddm/: Proxy-Inl.h  Proxy.h  StorageAdapter.h  TrafficGate.h
lib/cpp/src/zddm/adapters/: InMemoryStorageAdapter.h
lib/cpp/src/zddm/hashers/: SimpleHasher.h
lib/cpp/tests/: CMakeLists.txt  InMemoryMigrationTest.cpp  ProxyTest.cpp  TrafficGateTest.cpp
lib/erl/: readme.md
lib/erl/src/: zddm.app.src  zddm.erl  zddm_adapters.erl  zddm_hashers.erl  zddm_proxy.erl  zddm_storage_adapter.erl  zddm_sup.erl  zddm_traffic_gate.erl
lib/erl/src/tests/: zddm_memory_migration_test.erl  zddm_traffic_gate_test.erl
lib/go/: go.mod  proxy.go  readme.md  storage_adapter.go  traffic_gate.go  traffic_gate_test.go
lib/go/zddm/: proxy.go  proxy_test.go  storage_adapter.go
lib/go/zddm/tests/: in_memory_migration_test.go  proxy_test.go  traffic_gate_test.go  util.go
lib/rust/: Cargo.toml
lib/rust/src/: lib.rs  proxy.rs  traffic_gate.rs
